part4/exercise07/logoutput/logoutput-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: logpong
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: PROJECT/LOGOUTPUT_IMAGE
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5 
            httpGet:
               path: /healthz
               port: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: logoutput-configmap
