part4/exercise07/logoutput/logoutput-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
