part4/exercise07/logoutput/logoutput-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logoutput-svc
            port:
              number: 80
